--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,3 +1,36 @@
+= APIs
+:toc: left
+:toclevels: 2
+:sectlinks:
+
+
+[[resources-post]]
+== Search Blog (블로그 검색)
+
+=== Request
+==== Http
+include::{snippets}/search_blog/http-request.adoc[]
+include::{snippets}/search_blog/query-parameters.adoc[]
+
+==== curl
+include::{snippets}/search_blog/curl-request.adoc[]
+
+=== Response
+include::{snippets}/search_blog/http-response.adoc[]
+include::{snippets}/search_blog/response-fields.adoc[]
+
+
+[[resources-post]]
+== Keyword List (키워드 리스트 조회)
+
+=== Request
+==== Http
 include::{snippets}/keyword_list/http-request.adoc[]
-include::{snippets}/keyword_list/http-response.adoc[]
+==== curl
 include::{snippets}/keyword_list/curl-request.adoc[]
+
+=== Response
+include::{snippets}/keyword_list/http-response.adoc[]
+include::{snippets}/keyword_list/response-fields.adoc[]
+
+
